--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -4,10 +4,47 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
+        xmlns:design="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="250" Width="800">
     <Grid>
+        <StackPanel VerticalAlignment="Center">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
 
-        <Image Source="{Binding ImagePath}"/>
+                <Label Grid.Column="0" Content="IP" HorizontalAlignment="Center"  FontWeight="Bold" />
+                <TextBox Grid.Column="1" Text="{Binding Ip}"/>
+            </Grid>
+
+            <Grid Margin="0 10 0 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Column="0" Content="Port" HorizontalAlignment="Center"  FontWeight="Bold" />
+                <TextBox Grid.Column="1" Text="{Binding Port}"/>
+            </Grid>
+
+            <Grid Margin="0 10 0 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Column="0" Content="File" HorizontalAlignment="Center"  FontWeight="Bold" />
+                <TextBox Grid.Column="1" Text="{Binding FilePath}"/>
+                <Button Name="OpenFileBtn" Grid.Column="2" Content="Open File" FontSize="18" Margin="30 0 30 0" Click="OpenFileBtn_Click" />
+            </Grid>
+
+            <Button Name="SendBtn" Content="Send" FontSize="18" Width="300" Margin="0 60 0 0" Click="SendBtn_Click"/>
+
+        </StackPanel>
     </Grid>
 </Window>
